--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Dashboard</title>
-    <meta name="description" content="Basic HTML boilerplate" />
-    <meta name="author" content="Daily Dev Tips" />
+    <meta name="description" content="Vaccine Coverage Comparison Tool" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
